# memU-sdk-py

./: README.md  pyproject.toml
examples/: demo.py
src/memu_sdk/: __init__.py  client.py  models.py
tests/: __init__.py  test_integration.py  test_sdk.py
